fix: default square bg color now matches body bg to prevent flickering

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ h1, span {
   color: white;
 }
 .square {
-  background: purple;
+  background: #232323;
   width: 30%;
   padding-bottom: 30%;
   margin: 1.66%;
